--- a/src/Day14.ipynb
+++ b/src/Day14.ipynb
@@ -86,8 +86,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-15T10:40:54.780097Z",
-     "start_time": "2024-12-15T10:40:54.551340Z"
+     "end_time": "2024-12-15T15:01:37.030887Z",
+     "start_time": "2024-12-15T15:01:36.880179Z"
     }
    },
    "cell_type": "code",
@@ -117,7 +117,7 @@
     "fun List<Robot>.safetyFactor(s: Space): Int = filter { (pos, _) -> s.quadrants().any { pos in it } }.groupBy { (pos, _) -> s.quadrants().first { pos in it } }.map { (_, list) -> list.size }.reduce { a, b -> a * b }"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 19
   },
   {
    "metadata": {
@@ -201,8 +201,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-15T10:42:34.338244Z",
-     "start_time": "2024-12-15T10:42:34.296384Z"
+     "end_time": "2024-12-15T15:01:41.498242Z",
+     "start_time": "2024-12-15T15:01:41.454917Z"
     }
    },
    "cell_type": "code",
@@ -218,20 +218,33 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-15T10:42:35.634326Z",
-     "start_time": "2024-12-15T10:42:35.447959Z"
+     "end_time": "2024-12-15T15:01:45.248624Z",
+     "start_time": "2024-12-15T15:01:45.205161Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "val part2 = robots.updateInSpaceUntil(space) { update ->\n",
-    "    update.map { (pos, _) -> pos }.distinct().count() == robots.size\n",
-    "}\n",
+    "fun List<Robot>.isChristmasTree(): Boolean =\n",
+    "    distinctBy { (pos, _) -> pos.x to pos.y }.size == size"
+   ],
+   "outputs": [],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-15T15:02:43.029513Z",
+     "start_time": "2024-12-15T15:02:42.754398Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "val part2 = robots.updateInSpaceUntil(space) { it.isChristmasTree() }\n",
     "part2"
    ],
    "outputs": [
@@ -241,12 +254,12 @@
        "7892"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 23
   },
   {
    "metadata": {
